<resources>
    <string name="app_name">SMSSYNC</string>
    <string name="login_tool_bar">SMSS SYNC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_nav_home">Home</string>
    <string name="main_nav_repos">Repos</string>
    <string name="main_nav_profile">Me</string>

    <string name="login_tips">Sign in to GitHub</string>
    <string name="login_hint_username">Username or email address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_sign_in">Sign in</string>

    <string name="repos_filter_created">Sort by created</string>
    <string name="repos_filter_letter">Sort by letter</string>
    <string name="repos_filter_update">Sort by update</string>

    <string name="common_loading_empty">it\'s empty here</string>
    <string name="common_loading_error">network error</string>

    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings">Setting</string>
    <string name="total">Total</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="sms_successfully">Sms synchronized successfully</string>
    <string name="sms_fail">Sms synchronized pending</string>
    <string name="auto_back_up">Auto backup</string>
    <string name="client_id">Client-ID</string>
    <string name="api_key">API-Key</string>
    <string name="api_url">API-URL</string>
    <string name="number_of_day_ago">Number of day ago</string>
    <string name="back_up_status">Backup status:</string>
    <string name="on_off">On/Off backup:</string>
    <string name="count">Count:</string>
    <string name="status">Status</string>
    <string name="time">Time until next sync</string>
    <string name="next_time">Next run started</string>
    <string name="api_url_incorrect">Api url is incorrect.</string>
    <string name="api_url_not_empty">Api url is cannot be empty.</string>
    <string name="api_client_incorrect">Client Id cannot be empty.</string>
    <string name="api_key_incorrect">API key cannot be empty.</string>
    <string name="sync_running">Syncing</string>
    <string name="sync_success">Success</string>
    <string name="sync_fail">Fail</string>
    <string name="sync_waiting">Waiting</string>
    <string name="save">Save</string>
</resources>